[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "snap-base"
description='SuperNova Async Pipeline: base package'
readme = "README.md"
authors=[
	{name = 'Andrey Sheshukov', email = 'ash@jinr.ru'}
]
classifiers = [
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)"	
]
requires-python=">=3.9"

dynamic=["version"]
dependencies = [
	"pyyaml>=3.5", "tqdm>=4.53", "pyzmq>=20", "numpy"
]
[project.scripts]
snap_run="snap.node:run"

[project.urls]
Repository='https://github.com/Sheshuk/snap-base'

[project.optional-dependencies]
io = ["hop-client==0.5"]
doc =["sphinx", "sphinx-rtd-theme", "sphinx-argparse"]

[tool.setuptools.dynamic]
version = {attr = "snap.__version__"}

