[metadata]
name = snap-base
version = attr: snap.__version__
description='SuperNova Async Pipeline: base package'
long_description= file: README.md
long_description_content_type='text/markdown'
url='https://github.com/Sheshuk/snap-base'
author='Andrey Sheshukov'
author_email='ash@jinr.ru'
licence='GNU GPLv3'
license_files = LICENSE

[options]
install_requires = 
    pyyaml>=3.5 
    tqdm>=4.53
    pyzmq>=20
    numpy
packages= find:
package_dir= 
    =src
python_requires= >=3.9

[options.entry_points]
console_scripts =
    snap_run=snap.node:run
[options.packages.find]
where = src

[options.extras_require]
io = hop-client==0.5
doc = sphinx; sphinx-rtd-theme; sphinx-argparse


